force-app/main/default/objects/CloudCarbonEmissionsFactor__c/CloudCarbonEmissionsFactor__c.object-meta.xml
<CustomObject>
    <label>Cloud Carbon Emissions Factor</label>
    <nameField>
        <label>Cloud Carbon Emissions Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Carbon Emissions Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>