force-app/main/default/objects/CloudCarbonEmissionsFactor__c/fields/CO2e_metric_ton_kWh__c.field-meta.xml
<CustomField>
    <fullName>CO2e_metric_ton_kWh__c</fullName>
    <label>CO2e (metric ton/kWh)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>