force-app/main/default/objects/CloudCarbonEmissionsFactor__c/fields/EmissionsFactorDataSource__c.field-meta.xml
<CustomField>
    <fullName>EmissionsFactorDataSource__c</fullName>
    <label>Emissions Factor Data Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>