force-app/main/default/objects/CloudCarbonEmissionsFactor__c/fields/EmissionsFactorLocation__c.field-meta.xml
<CustomField>
    <fullName>EmissionsFactorLocation__c</fullName>
    <label>Emissions Factor Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>