force-app/main/default/objects/CloudCarbonEmissionsFactor__c/fields/EmissionsFactorUpdateYear__c.field-meta.xml
<CustomField>
    <fullName>EmissionsFactorUpdateYear__c</fullName>
    <label>Emissions Factor Update Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>